Fixed footer layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
   --font-poppins: "Poppins", sans-serif;
   --font-playfair: "Playfair Display", serif;
   --font-montserrat: "Montserrat", sans-serif;
+  --font-cinzel: "Cinzel", serif;
+  --font-cormorant: "Cormorant Garamond", serif;
+  --font-lora: "Lora", serif;
 }
 
 .menu-font {
